--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,6 @@
 .history/JS-POO/atr-met-estaticos/index_20221101212026.js
 .history/JS-POO/atr-met-estaticos/index_20221101211702.js
 .history/JS-POO/atr-met-estaticos/index_20221101211613.js
+.history/JS-POO/atr-met-estaticos/index_20221102173625.html
+.history/JS-POO/atr-met-estaticos/index_20221102173702.html
+.history/JS-POO/atr-met-estaticos/index_20221102173922.html
