--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,70 @@
 .history/JS-POO/atr-met-estaticos/index_20221102173625.html
 .history/JS-POO/atr-met-estaticos/index_20221102173702.html
 .history/JS-POO/atr-met-estaticos/index_20221102173922.html
+.history/JS-POO/proj-pratc-js-bookstore/App_20221103202812.js
+.history/JS-POO/proj-pratc-js-bookstore/App_20221103204800.js
+.history/JS-POO/proj-pratc-js-bookstore/App_20221103205109.js
+.history/JS-POO/proj-pratc-js-bookstore/App_20221103205324.js
+.history/JS-POO/proj-pratc-js-bookstore/App_20221103205328.js
+.history/JS-POO/proj-pratc-js-bookstore/App_20221103205740.js
+.history/JS-POO/proj-pratc-js-bookstore/App_20221103210803.js
+.history/JS-POO/proj-pratc-js-bookstore/App_20221103210829.js
+.history/JS-POO/proj-pratc-js-bookstore/App_20221103211939.js
+.history/JS-POO/proj-pratc-js-bookstore/App_20221103211952.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Author_20221103200408.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Author_20221103200518.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Book_20221103201035.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Book_20221103201252.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Order_20221103201438.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Order_20221103201521.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Order_20221103201602.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Order_20221103201758.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Order_20221103201807.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Order_20221103201905.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Order_20221103201938.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Order_20221103201948.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Order_20221103202148.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Posters_20221103201255.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Posters_20221103201425.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Products_20221103200549.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Products_20221103200738.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Products_20221103200944.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Products_20221103201027.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/Products_20221103201032.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/User_20221103200310.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/User_20221103200325.js
+.history/JS-POO/proj-pratc-js-bookstore/classes/User_20221103200348.js
+.history/JS-POO/proj-pratc-js-bookstore/Database_20221103202912.js
+.history/JS-POO/proj-pratc-js-bookstore/Database_20221103203308.js
+.history/JS-POO/proj-pratc-js-bookstore/Database_20221103203708.js
+.history/JS-POO/proj-pratc-js-bookstore/Database_20221103204334.js
+.history/JS-POO/proj-pratc-js-bookstore/Database_20221103210937.js
+.history/JS-POO/proj-pratc-js-bookstore/Database_20221103211257.js
+.history/JS-POO/proj-pratc-js-bookstore/Database_20221103211318.js
+.history/JS-POO/proj-pratc-js-bookstore/entities/Book_20221103201251.js
+.history/JS-POO/proj-pratc-js-bookstore/entities/Book_20221103213013.js
+.history/JS-POO/proj-pratc-js-bookstore/entities/Book_20221103213022.js
+.history/JS-POO/proj-pratc-js-bookstore/entities/Order_20221103202147.js
+.history/JS-POO/proj-pratc-js-bookstore/entities/Order_20221103211417.js
+.history/JS-POO/proj-pratc-js-bookstore/entities/Order_20221103211833.js
+.history/JS-POO/proj-pratc-js-bookstore/entities/Order_20221103211901.js
+.history/JS-POO/proj-pratc-js-bookstore/entities/Order_20221103212006.js
+.history/JS-POO/proj-pratc-js-bookstore/entities/Order_20221103212031.js
+.history/JS-POO/proj-pratc-js-bookstore/entities/Order_20221103212207.js
+.history/JS-POO/proj-pratc-js-bookstore/entities/Order_20221103212313.js
+.history/JS-POO/proj-pratc-js-bookstore/entities/Order_20221103212331.js
+.history/JS-POO/proj-pratc-js-bookstore/entities/Order_20221103213132.js
+.history/JS-POO/proj-pratc-js-bookstore/entities/Order_20221103213221.js
+.history/JS-POO/proj-pratc-js-bookstore/entities/Posters_20221103201424.js
+.history/JS-POO/proj-pratc-js-bookstore/entities/Posters_20221103213029.js
+.history/JS-POO/proj-pratc-js-bookstore/entities/Products_20221103201031.js
+.history/JS-POO/proj-pratc-js-bookstore/entities/Products_20221103212832.js
+.history/JS-POO/proj-pratc-js-bookstore/entities/Products_20221103213007.js
+.history/JS-POO/proj-pratc-js-bookstore/index_20221103205744.js
+.history/JS-POO/proj-pratc-js-bookstore/index_20221103205813.js
+.history/JS-POO/proj-pratc-js-bookstore/index_20221103210220.js
+.history/JS-POO/proj-pratc-js-bookstore/index_20221103210431.js
+.history/JS-POO/proj-pratc-js-bookstore/index_20221103210515.js
+.history/JS-POO/proj-pratc-js-bookstore/index_20221103210539.js
+.history/JS-POO/proj-pratc-js-bookstore/index_20221103210657.js
+.history/JS-POO/proj-pratc-js-bookstore/index_20221103210745.js
