--- a/.gitignore
+++ b/.gitignore
@@ -233,3 +233,44 @@
 .history/JS-POO/proj-pratc-js-bookstore/index_20221103210539.js
 .history/JS-POO/proj-pratc-js-bookstore/index_20221103210657.js
 .history/JS-POO/proj-pratc-js-bookstore/index_20221103210745.js
+.history/JS-POO/proj2/entities/User_20221109170144.js
+.history/JS-POO/proj2/entities/User_20221109170059.js
+.history/JS-POO/proj2/entities/User_20221109170045.js
+.history/JS-POO/proj2/entities/User_20221109165949.js
+.history/JS-POO/proj2/entities/Author_20221109170227.js
+.history/JS-POO/proj2/entities/Author_20221109165939.js
+.history/JS-POO/proj-pratc-js-bookstore/App_20221109165835.js
+.history/JS-POO/proj-pratc-js-bookstore/App_20221109165757.js
+.history/JS-POO/ex-class-banco/User_20221109173405.js
+.history/JS-POO/ex-class-banco/User_20221109173247.js
+.history/JS-POO/ex-class-banco/Transfer_20221109171356.js
+.history/JS-POO/ex-class-banco/Transfer_20221109171236.js
+.history/JS-POO/ex-class-banco/Loan_20221109175457.js
+.history/JS-POO/ex-class-banco/Loan_20221109172159.js
+.history/JS-POO/ex-class-banco/Loan_20221109171743.js
+.history/JS-POO/ex-class-banco/Loan_20221109171738.js
+.history/JS-POO/ex-class-banco/Loan_20221109171731.js
+.history/JS-POO/ex-class-banco/Loan_20221109171548.js
+.history/JS-POO/ex-class-banco/Installment_20221109171530.js
+.history/JS-POO/ex-class-banco/Installment_20221109171430.js
+.history/JS-POO/ex-class-banco/Installment_20221109171419.js
+.history/JS-POO/ex-class-banco/index_20221109181250.js
+.history/JS-POO/ex-class-banco/index_20221109181227.js
+.history/JS-POO/ex-class-banco/index_20221109175746.js
+.history/JS-POO/ex-class-banco/index_20221109175726.js
+.history/JS-POO/ex-class-banco/index_20221109175648.js
+.history/JS-POO/ex-class-banco/index_20221109175329.js
+.history/JS-POO/ex-class-banco/index_20221109175316.js
+.history/JS-POO/ex-class-banco/index_20221109175308.js
+.history/JS-POO/ex-class-banco/index_20221109175242.js
+.history/JS-POO/ex-class-banco/index_20221109175040.js
+.history/JS-POO/ex-class-banco/index_20221109174907.js
+.history/JS-POO/ex-class-banco/index_20221109174509.js
+.history/JS-POO/ex-class-banco/Deposit_20221109171228.js
+.history/JS-POO/ex-class-banco/Deposit_20221109171045.js
+.history/JS-POO/ex-class-banco/App_20221109174449.js
+.history/JS-POO/ex-class-banco/App_20221109173428.js
+.history/JS-POO/ex-class-banco/Account_20221109173244.js
+.history/JS-POO/ex-class-banco/Account_20221109172951.js
+.history/JS-POO/ex-class-banco/Account_20221109172526.js
+.history/JS-POO/ex-class-banco/Account_20221109172259.js
