--- a/.gitignore
+++ b/.gitignore
@@ -274,3 +274,37 @@
 .history/JS-POO/ex-class-banco/Account_20221109172951.js
 .history/JS-POO/ex-class-banco/Account_20221109172526.js
 .history/JS-POO/ex-class-banco/Account_20221109172259.js
+.history/JS-Avanc/catch/index_20221109185122.js
+.history/JS-Avanc/catch/index_20221109185155.js
+.history/JS-Avanc/catch/index_20221109185258.js
+.history/JS-Avanc/promises/index_20221109183338.js
+.history/JS-Avanc/promises/index_20221109183504.js
+.history/JS-Avanc/promises/index_20221109183524.js
+.history/JS-Avanc/promises/index_20221109183554.js
+.history/JS-Avanc/promises/index_20221109183801.js
+.history/JS-Avanc/promises/index_20221109184115.js
+.history/JS-Avanc/promises/index_20221109184139.js
+.history/JS-Avanc/promises/index_20221109184159.js
+.history/JS-Avanc/promises/index_20221109184345.js
+.history/JS-Avanc/promises/index_20221109184437.js
+.history/JS-Avanc/promises/index_20221109184501.js
+.history/JS-Avanc/setInt-setTim/index_20221109181502.js
+.history/JS-Avanc/setInt-setTim/index_20221109181624.js
+.history/JS-Avanc/setInt-setTim/index_20221109181734.js
+.history/JS-Avanc/setInt-setTim/index_20221109181850.js
+.history/JS-Avanc/setInt-setTim/index_20221109181909.js
+.history/JS-Avanc/setInt-setTim/index_20221109182000.js
+.history/JS-Avanc/setInt-setTim/index_20221109182045.js
+.history/JS-Avanc/setInt-setTim/index_20221109182145.js
+.history/JS-Avanc/setInt-setTim/index_20221109182211.js
+.history/JS-Avanc/sinc-assinc/index_20221109182921.js
+.history/JS-Avanc/sinc-assinc/index_20221109183050.js
+.history/JS-Avanc/sinc-assinc/index_20221109183157.js
+.history/JS-Avanc/then/index_20221109184517.js
+.history/JS-Avanc/then/index_20221109184532.js
+.history/JS-Avanc/then/index_20221109184742.js
+.history/JS-Avanc/then/index_20221109184803.js
+.history/JS-Avanc/then/index_20221109184813.js
+.history/JS-Avanc/then/index_20221109184854.js
+.history/JS-Avanc/then/index_20221109184920.js
+.history/JS-Avanc/then/index_20221109184946.js
