--- a/.gitignore
+++ b/.gitignore
@@ -308,3 +308,57 @@
 .history/JS-Avanc/then/index_20221109184854.js
 .history/JS-Avanc/then/index_20221109184920.js
 .history/JS-Avanc/then/index_20221109184946.js
+.history/JS-Avanc/encadear-promises/index_20221110200757.js
+.history/JS-Avanc/encadear-promises/index_20221110200843.js
+.history/JS-Avanc/encadear-promises/index_20221110201206.js
+.history/JS-Avanc/encadear-promises/index_20221110201435.js
+.history/JS-Avanc/encadear-promises/index_20221110201502.js
+.history/JS-Avanc/encadear-promises/index_20221110201610.js
+.history/JS-Avanc/encadear-promises/index_20221110201650.js
+.history/JS-Avanc/encadear-promises/index_20221110201745.js
+.history/JS-Avanc/encadear-promises/index_20221110201857.js
+.history/JS-Avanc/encadear-promises/index_20221110201941.js
+.history/JS-Avanc/encadear-promises/index_20221110202134.js
+.history/JS-Avanc/encadear-promises/index_20221110202603.js
+.history/JS-Avanc/ex-promise-avanc/index_20221110203645.js
+.history/JS-Avanc/ex-promise-avanc/index_20221110203702.js
+.history/JS-Avanc/ex-promise-avanc/index_20221110203811.js
+.history/JS-Avanc/ex-promise-avanc/Spaceship_20221110203648.js
+.history/JS-Avanc/ex-promise-avanc/Spaceship_20221110203709.js
+.history/JS-Avanc/ex-promise-avanc/Spaceship_20221110203757.js
+.history/JS-Avanc/ex-promise-avanc/SpaceShipEngine_20221110203652.js
+.history/JS-Avanc/ex-promise-avanc/SpaceShipEngine_20221110203715.js
+.history/JS-Avanc/ex-promise-avanc/SpaceShipEngine_20221110204050.js
+.history/JS-Avanc/ex-promise-avanc/SpaceShipEngine_20221110204144.js
+.history/JS-Avanc/ex-promise-avanc/SpaceShipEngine_20221110204243.js
+.history/JS-Avanc/ex-promise-avanc/SpaceShipEngine_20221110204323.js
+.history/JS-Avanc/ex-promise-avanc/SpaceShipEngine_20221110204334.js
+.history/JS-Avanc/ex-promise-avanc/SpaceShipEngine_20221110204558.js
+.history/JS-Avanc/ex-promise-avanc/SpaceShipEngine_20221110204708.js
+.history/JS-Avanc/ex-promises/index_20221110195621.js
+.history/JS-Avanc/ex-promises/index_20221110195714.js
+.history/JS-Avanc/ex-promises/index_20221110200416.js
+.history/JS-Avanc/ex-promises/index_20221110200448.js
+.history/JS-Avanc/ex-promises/index_20221110200532.js
+.history/JS-Avanc/ex-promises/index_20221110200628.js
+.history/JS-Avanc/ex-promises/index_20221110200710.js
+.history/JS-Avanc/ex-promises/Spaceship_20221110195454.js
+.history/JS-Avanc/ex-promises/Spaceship_20221110195618.js
+.history/JS-Avanc/ex-promises/SpaceShipEngine_20221110195718.js
+.history/JS-Avanc/ex-promises/SpaceShipEngine_20221110195806.js
+.history/JS-Avanc/ex-promises/SpaceShipEngine_20221110195816.js
+.history/JS-Avanc/ex-promises/SpaceShipEngine_20221110195824.js
+.history/JS-Avanc/ex-promises/SpaceShipEngine_20221110195928.js
+.history/JS-Avanc/ex-promises/SpaceShipEngine_20221110195935.js
+.history/JS-Avanc/ex-promises/SpaceShipEngine_20221110200105.js
+.history/JS-Avanc/ex-promises/SpaceShipEngine_20221110200142.js
+.history/JS-Avanc/ex-promises/SpaceShipEngine_20221110200255.js
+.history/JS-Avanc/ex-promises/SpaceShipEngine_20221110200547.js
+.history/JS-Avanc/ex-promises/SpaceShipEngine_20221110200608.js
+.history/JS-Avanc/varias-promises/index_20221110202736.js
+.history/JS-Avanc/varias-promises/index_20221110202936.js
+.history/JS-Avanc/varias-promises/index_20221110203059.js
+.history/JS-Avanc/varias-promises/index_20221110203410.js
+.history/JS-Avanc/varias-promises/index_20221110203500.js
+.history/JS-Avanc/varias-promises/index_20221110203543.js
+.history/JS-Avanc/varias-promises/index_20221110203549.js
