--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,69 @@
 .history/JS-Avanc/varias-promises/index_20221110203500.js
 .history/JS-Avanc/varias-promises/index_20221110203543.js
 .history/JS-Avanc/varias-promises/index_20221110203549.js
+.history/JS-Avanc/async-functin/index_20221114182743.js
+.history/JS-Avanc/async-functin/index_20221114183145.js
+.history/JS-Avanc/async-functin/index_20221114183234.js
+.history/JS-Avanc/async-functin/index_20221114183329.js
+.history/JS-Avanc/async-functin/index_20221114183401.js
+.history/JS-Avanc/async-functin/index_20221114183422.js
+.history/JS-Avanc/async-functin/index_20221114183439.js
+.history/JS-Avanc/async-functin/index_20221114183450.js
+.history/JS-Avanc/async-functin/index_20221114183839.js
+.history/JS-Avanc/await+promises/index_20221114184732.js
+.history/JS-Avanc/await+promises/index_20221114185059.js
+.history/JS-Avanc/await+promises/index_20221114185139.js
+.history/JS-Avanc/await+promises/index_20221114185149.js
+.history/JS-Avanc/await/index_20221114184019.js
+.history/JS-Avanc/await/index_20221114184117.js
+.history/JS-Avanc/await/index_20221114184428.js
+.history/JS-Avanc/await/index_20221114184440.js
+.history/JS-Avanc/await/index_20221114184454.js
+.history/JS-Avanc/await/index_20221114184522.js
+.history/JS-Avanc/await/index_20221114184628.js
+.history/JS-Avanc/await/index_20221114184644.js
+.history/JS-Avanc/ex-async-funct/index_20221114185310.js
+.history/JS-Avanc/ex-async-funct/index_20221114185328.js
+.history/JS-Avanc/ex-async-funct/Spaceship_20221114185313.js
+.history/JS-Avanc/ex-async-funct/Spaceship_20221114185336.js
+.history/JS-Avanc/ex-async-funct/SpaceShipEngine_20221114185317.js
+.history/JS-Avanc/ex-async-funct/SpaceShipEngine_20221114185340.js
+.history/JS-Avanc/ex-async-funct/SpaceShipEngine_20221114185457.js
+.history/JS-Avanc/ex-async-funct/SpaceShipEngine_20221114185559.js
+.history/JS-Avanc/ex-async-funct/SpaceShipEngine_20221114185612.js
+.history/JS-Avanc/ex-async-funct/SpaceShipEngine_20221114185720.js
+.history/JS-Avanc/ex-async-funct/SpaceShipEngine_20221114185749.js
+.history/JS-Avanc/ex-async-funct/SpaceShipEngine_20221114185843.js
+.history/JS-Avanc/ex-async-funct/SpaceShipEngine_20221114185911.js
+.history/JS-Avanc/ex-async-funct/SpaceShipEngine_20221114190024.js
+.history/JS-Avanc/ex-async-funct/SpaceShipEngine_20221114190041.js
+.history/JS-Avanc/ex-async-funct/SpaceShipEngine_20221114190103.js
+.history/JS-Avanc/ex-async-funct/SpaceShipEngine_20221114190147.js
+.history/JS-Avanc/ex-async-funct/SpaceShipEngine_20221114190215.js
+.history/JS-Avanc/ex-async-funct/SpaceShipEngine_20221114190222.js
+.history/JS-Avanc/ex-async-funct/SpaceShipEngine_20221114190241.js
+.history/JS-Avanc/ex-async-funct/SpaceShipEngine_20221114190300.js
+.history/JS-Avanc/ex-async-funct/SpaceShipEngine_20221114190409.js
+.history/JS-Avanc/ex-async-funct/SpaceShipEngine_20221114190424.js
+.history/Requisicao/intro-API/index_20221114190947.js
+.history/Requisicao/intro-API/index_20221114191143.js
+.history/Requisicao/intro-API/index_20221114191645.js
+.history/Requisicao/intro-API/index_20221114191707.js
+.history/Requisicao/intro-API/index_20221114191933.js
+.history/Requisicao/intro-API/index_20221114192004.js
+.history/Requisicao/intro-API/index_20221114192047.js
+.history/Requisicao/intro-API/index_20221114192117.js
+.history/Requisicao/intro-API/index_20221114192158.js
+.history/Requisicao/intro-API/index_20221114192211.js
+.history/Requisicao/intro-API/Neo_20221114190958.js
+.history/Requisicao/intro-API/Neo_20221114191039.js
+.history/Requisicao/intro-API/Neo_20221114191050.js
+.history/Requisicao/intro-API/Neo_20221114191100.js
+.history/Requisicao/intro-API/Neo_20221114191848.js
+.history/Requisicao/intro-API/neo_service_20221114191146.js
+.history/Requisicao/intro-API/neo_service_20221114191209.js
+.history/Requisicao/intro-API/neo_service_20221114191228.js
+.history/Requisicao/intro-API/neo_service_20221114191329.js
+.history/Requisicao/intro-API/neo_service_20221114191831.js
+.history/Requisicao/intro-API/neo_service_20221114192004.js
+.history/Requisicao/intro-API/neo_service_20221114192019.js
